Filter added to businesses, Activities, and Stay

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -186,9 +186,9 @@
                     <!-- Add a ViewPager to display events -->
                     <RelativeLayout
                         android:layout_width="match_parent"
-                        android:layout_height="120dp"
+                        android:layout_height="wrap_content"
                         android:layout_alignParentBottom="true"
-                        android:layout_marginBottom="8dp"
+                        android:layout_marginBottom="16dp"
                         >
                     <androidx.viewpager.widget.ViewPager
                         android:id="@+id/viewPager"
