--- a/app/src/main/res/layout/activity_activities.xml
+++ b/app/src/main/res/layout/activity_activities.xml
@@ -71,21 +71,41 @@
                 android:layout_height="match_parent"
                 android:layout_below="@+id/frameParentActivities">
 
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/cardViewSearch"
+                <LinearLayout
+                    android:id="@+id/linearFilterSearch"
                     android:layout_width="match_parent"
-                    android:layout_height="48dp"
-                    android:layout_marginStart="25dp"
+                    android:layout_height="55dp"
+                    android:layout_marginStart="8dp"
                     android:layout_marginTop="16dp"
-                    android:layout_marginEnd="25dp"
                     android:layout_marginBottom="16dp"
-                    app:cardCornerRadius="8dp"
-                    app:cardElevation="8dp">
+                    android:orientation="horizontal">
+
+                    <ImageButton
+                        android:id="@+id/btnFilter"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginEnd="8dp"
+                        android:background="@android:color/transparent"
+                        android:contentDescription="@string/Experience"
+                        android:minWidth="48dp"
+                        android:minHeight="48dp"
+                        android:src="@drawable/baseline_filter_list_24" />
+
+                    <androidx.cardview.widget.CardView
+                        android:id="@+id/cardViewSearch"
+                        android:layout_width="match_parent"
+                        android:layout_height="48dp"
+                        android:layout_marginEnd="8dp"
+                        app:cardCornerRadius="8dp"
+                        app:cardElevation="8dp">
 
                     <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginEnd="8dp"
                         android:padding="8dp">
+
                         <ImageButton
                             android:id="@+id/btnSearch"
                             android:layout_width="wrap_content"
@@ -100,10 +120,11 @@
                             android:id="@+id/etSearch"
                             android:layout_width="300dp"
                             android:layout_height="match_parent"
+                            android:layout_toEndOf="@+id/btnSearch"
                             android:autofillHints=""
                             android:background="@android:color/transparent"
                             android:gravity="center"
-                            android:layout_toEndOf="@+id/btnSearch"
+                            android:layout_marginEnd="8dp"
                             android:hint="@string/searchBar"
                             android:inputType="text"
                             android:maxLines="1"
@@ -117,12 +138,13 @@
 
                     </RelativeLayout>
                 </androidx.cardview.widget.CardView>
+                </LinearLayout>
 
                 <ListView
                     android:id="@+id/activityListView"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_below="@id/cardViewSearch"
+                    android:layout_below="@id/linearFilterSearch"
                     android:layout_centerInParent="true"
                     android:dividerHeight="1dp" />
             </RelativeLayout>
