--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -66,7 +66,8 @@
         android:visibility="gone"
         style="@style/TextViewLinkTheme"
         android:text="something@example.co.za"
-        android:drawableStart="@drawable/website"/>
+        app:drawableTint="@color/black"
+        app:drawableStartCompat="@drawable/website" />
 
     <TextView
         android:id="@+id/tvEatEmail"
@@ -80,7 +81,8 @@
         style="@style/TextViewLinkTheme"
         android:visibility="gone"
         android:text="something@example.co.za"
-        android:drawableStart="@drawable/mail"/>
+        app:drawableStartCompat="@drawable/mail"
+        app:drawableTint="@color/black"/>
 
     <TextView
         android:id="@+id/tvContactNumber"
@@ -91,11 +93,12 @@
         android:autoLink="phone"
         android:visibility="gone"
         style="@style/TextViewLinkTheme"
-        android:drawableStart="@drawable/call"
         android:text="0825649853"
         android:drawablePadding="8dp"
         android:textSize="16sp"
-        tools:ignore="TouchTargetSizeCheck" />
+        tools:ignore="TouchTargetSizeCheck"
+        app:drawableStartCompat="@drawable/call"
+        app:drawableTint="@color/black"/>
 
     <TextView
         android:id="@+id/tvLocationToEats"
@@ -104,12 +107,13 @@
         android:layout_below="@id/tvContactNumber"
         android:layout_marginTop="8dp"
         style="@style/TextViewLinkTheme"
-        android:drawableStart="@drawable/baseline_location_on_24"
         android:text="Yessssir"
         android:visibility="gone"
         android:drawablePadding="8dp"
         android:textSize="16sp"
-        tools:ignore="TouchTargetSizeCheck" />
+        tools:ignore="TouchTargetSizeCheck"
+        app:drawableTint="@color/black"
+        app:drawableStartCompat="@drawable/baseline_location_on_24" />
 
     <View
         android:id="@+id/lineAboveDescription"
@@ -143,7 +147,6 @@
         android:id="@+id/descriptionTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/tvDescriptionHeading"
         android:layout_marginTop="8dp"
         android:paddingBottom="16dp"
         android:textColor="@color/black"
