--- a/app/src/main/res/layout/event_detail.xml
+++ b/app/src/main/res/layout/event_detail.xml
@@ -68,6 +68,7 @@
             android:layout_weight="1"
             android:drawableStart="@drawable/mail"
             android:drawablePadding="8dp"
+            app:drawableTint="@color/black"
             android:gravity="start"
             android:text="Title"
             android:textSize="16sp"
@@ -82,6 +83,7 @@
             android:drawableStart="@drawable/baseline_calendar_month_24"
             android:drawablePadding="8dp"
             android:gravity="start"
+            app:drawableTint="@color/black"
             android:text="Event Date"
             android:textSize="16sp"
             android:visibility="gone" />
@@ -107,7 +109,8 @@
             android:gravity="start"
             android:text="Title"
             android:textSize="16sp"
-            android:visibility="gone" />
+            android:visibility="gone"
+            app:drawableTint="@color/black"/>
 
         <TextView
             android:id="@+id/tvStartTime"
@@ -120,7 +123,8 @@
             android:gravity="start"
             android:text="Title"
             android:textSize="16sp"
-            android:visibility="gone" />
+            android:visibility="gone"
+            app:drawableTint="@color/black"/>
     </LinearLayout>
 
     <TextView
@@ -134,7 +138,8 @@
         android:gravity="start"
         android:text="Title"
         android:textSize="16sp"
-        android:visibility="gone" />
+        android:visibility="gone"
+        app:drawableTint="@color/black"/>
 
     <TextView
         android:id="@+id/tvEventNum"
@@ -146,6 +151,7 @@
         android:drawablePadding="8dp"
         android:gravity="start"
         android:text="Title"
+        app:drawableTint="@color/black"
         android:textSize="16sp"
         android:visibility="gone" />
 
