--- a/app/src/main/res/layout/custom_adverts.xml
+++ b/app/src/main/res/layout/custom_adverts.xml
@@ -2,24 +2,24 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
+    android:layout_height="130dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardViewHome"
-        android:layout_width="200dp"
-        android:layout_height="100dp"
+        android:layout_width="180dp"
+        android:layout_height="130dp"
         app:cardCornerRadius="16dp"
         app:cardElevation="10dp"
         android:layout_centerVertical="true"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        >
+        android:layout_marginEnd="8dp">
+
         <ImageView
             android:id="@+id/imgEvent"
             android:layout_width="match_parent"
-            android:layout_height="100dp"
+            android:layout_height="match_parent"
             android:scaleType="centerCrop"
             android:src="@drawable/eel_event_image" />
 
@@ -27,10 +27,11 @@
 
     <TextView
         android:id="@+id/tvAdvertTitle"
-        android:layout_width="100dp"
-        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
         android:text="Visit our local store!"
         android:gravity="center"
+        android:layout_marginTop="8dp"
         android:textSize="16sp"
         android:layout_toEndOf="@+id/cardViewHome"
 
@@ -39,11 +40,15 @@
     <Button
         android:id="@+id/btnGoToEvent"
         android:layout_width="70dp"
-        android:layout_height="50dp"
+        android:layout_height="60dp"
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
         android:layout_marginEnd="8dp"
+        android:layout_toEndOf="@+id/cardViewHome"
+        android:layout_below="@+id/tvAdvertTitle"
         android:backgroundTint="@android:color/transparent"
+        android:layout_alignParentBottom="true"
+        android:gravity="center"
         android:text="Visit"
         android:textColor="@color/black"
         android:textSize="10sp"
