--- a/app/src/main/res/layout/events_home.xml
+++ b/app/src/main/res/layout/events_home.xml
@@ -55,7 +55,7 @@
     <!--Event Location-->
     <TextView
         android:id="@+id/eventLocation"
-        android:layout_width="wrap_content"
+        android:layout_width="180dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/eventTime"
         android:layout_toEndOf="@+id/cardViewHome"
