--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,8 +12,10 @@
     <color name="gray_400">#FFBDBDBD</color>
     <color name="gray_600">#FF757575</color>
     <color name="linkColor">#0C98E8</color>
+    <color name="stilbaaiBlue">#16c6f0</color>
 
-<!--EDIT TEXTS-->
+
+    <!--EDIT TEXTS-->
 <color name="editTextBlue">#007bff</color>
 
     <!--custom_card-->
