--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,7 @@
     <color name="gray_600">#FF757575</color>
     <color name="linkColor">#0C98E8</color>
     <color name="stilbaaiBlue">#16c6f0</color>
+    <color name="stilbaaiBlue2">#1692F0</color>
 
 
     <!--EDIT TEXTS-->
