--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -78,6 +78,7 @@
                 android:layout_height="match_parent"
                 android:layout_below="@+id/frameParentHome"
                 android:layout_marginTop="-20dp"
+                android:layout_marginBottom="-20dp"
                 app:cardCornerRadius="20dp"
                 app:cardElevation="8dp">
 
