--- a/app/src/main/res/layout/events_custom_layout.xml
+++ b/app/src/main/res/layout/events_custom_layout.xml
@@ -15,8 +15,8 @@
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cardViewEventImage"
-            android:layout_width="120dp"
-            android:layout_height="80dp"
+            android:layout_width="130dp"
+            android:layout_height="90dp"
             android:layout_marginStart="6dp"
             android:layout_marginTop="6dp"
             android:layout_marginEnd="6dp"
@@ -49,7 +49,7 @@
                 android:gravity="start"
                 android:text="Event Name"
                 android:textColor="@color/black"
-                android:textSize="18sp" />
+                android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/timeTextView"
@@ -60,7 +60,7 @@
                 android:layout_centerVertical="true"
                 android:gravity="center"
                 android:layout_marginStart="8dp"
-                android:textSize="12sp"
+                android:textSize="14sp"
                 android:textColor="@color/black"
                 android:layout_marginEnd="16dp"
                 android:layout_marginBottom="6dp"
@@ -77,7 +77,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/relContent"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="4dp"
             android:layout_marginEnd="8dp"
             android:layout_toEndOf="@+id/cardViewEventImage"
             android:layout_toRightOf="@id/cardViewEventImage"
@@ -86,25 +86,25 @@
             <Button
                 android:id="@+id/addToCalendarButton"
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
+                android:layout_height="fill_parent"
                 android:layout_marginEnd="10dp"
                 android:layout_weight="1.2"
                 android:backgroundTint="#DCDCDC"
                 android:text="Add"
                 android:textColor="@color/black"
-                android:textSize="10sp"
+                android:textSize="12sp"
                 app:drawableLeftCompat="@drawable/baseline_calendar_month_24"
                 tools:ignore="TouchTargetSizeCheck" />
 
             <Button
                 android:id="@+id/btnViewEventDetails"
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
+                android:layout_height="fill_parent"
                 android:layout_weight="1"
                 android:backgroundTint="#DCDCDC"
                 android:text="View Event"
                 android:textColor="@color/black"
-                android:textSize="10sp"
+                android:textSize="12sp"
                 app:drawableLeftCompat="@drawable/baseline_search_24"
                 tools:ignore="TouchTargetSizeCheck" />
         </LinearLayout>
