Removed unnecessary and un-used files/folders. Fixed incorrect icon in business detail.

--- a/app/src/main/res/layout/business_detail.xml
+++ b/app/src/main/res/layout/business_detail.xml
@@ -127,7 +127,7 @@
         android:gravity="start"
         android:text="Contact Number"
         app:drawableTint="@color/black"
-        app:drawableStartCompat="@drawable/baseline_location_on_24" />
+        app:drawableStartCompat="@drawable/call" />
 
     <View
         android:id="@+id/lineAboveDescription"
