Events UI Updated, and Adverts updated as well

--- a/app/src/main/res/layout/events_custom_layout.xml
+++ b/app/src/main/res/layout/events_custom_layout.xml
@@ -2,9 +2,12 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/cardEvent"
     android:layout_width="match_parent"
-    android:layout_height="130dp"
+    android:layout_height="110dp"
     android:layout_margin="8dp"
+    android:clickable="true"
+    android:focusable="true"
     android:elevation="12dp"
     android:padding="16dp">
 
@@ -16,7 +19,7 @@
         <androidx.cardview.widget.CardView
             android:id="@+id/cardViewEventImage"
             android:layout_width="130dp"
-            android:layout_height="90dp"
+            android:layout_height="100dp"
             android:layout_marginStart="6dp"
             android:layout_marginTop="6dp"
             android:layout_marginEnd="6dp"
@@ -37,19 +40,23 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
             android:layout_toEndOf="@id/cardViewEventImage">
 
             <TextView
                 android:id="@+id/eventNameTextView"
-                android:layout_width="wrap_content"
+                android:layout_width="160dp"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_marginTop="6dp"
                 android:layout_marginEnd="6dp"
                 android:gravity="start"
+                android:maxLines="1"
+                android:ellipsize="end"
+                android:fontFamily="@font/roboto_regular"
                 android:text="Event Name"
                 android:textColor="@color/black"
-                android:textSize="20sp" />
+                android:textSize="16sp" />
 
             <TextView
                 android:id="@+id/timeTextView"
@@ -62,52 +69,66 @@
                 android:layout_marginStart="8dp"
                 android:textSize="14sp"
                 android:textColor="@color/black"
-                android:layout_marginEnd="16dp"
+                android:layout_marginEnd="12dp"
                 android:layout_marginBottom="6dp"
                 android:foregroundGravity="right"
-                android:drawablePadding="8dp"
+                android:drawablePadding="4dp"
+                android:drawableTint="@color/black"
                 android:text="Time"
                 app:drawableStartCompat="@drawable/baseline_access_time_24" />
 
+
         </RelativeLayout>
 
-        <LinearLayout
-            android:id="@+id/linearButtons"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_below="@+id/relContent"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="4dp"
-            android:layout_marginEnd="8dp"
             android:layout_toEndOf="@+id/cardViewEventImage"
-            android:layout_toRightOf="@id/cardViewEventImage"
-            android:gravity="bottom|end">
+            android:layout_marginTop="4dp"
+            android:layout_marginBottom="10dp">
 
-            <Button
+            <TextView
+                android:id="@+id/tvEventLocation"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@android:color/transparent"
+                android:layout_marginStart="8dp"
+                android:backgroundTint="#DCDCDC"
+                android:gravity="center"
+                android:maxLines="1"
+                android:ellipsize="end"
+                android:text="Add to calender"
+                android:drawableTint="@color/black"
+                android:drawablePadding="4dp"
+                android:textColor="@color/black"
+                android:visibility="gone"
+                android:textSize="12sp"
+                app:drawableLeftCompat="@drawable/baseline_location_on_24"
+                tools:ignore="TouchTargetSizeCheck" />
+
+            <TextView
                 android:id="@+id/addToCalendarButton"
-                android:layout_width="match_parent"
-                android:layout_height="fill_parent"
-                android:layout_marginEnd="10dp"
-                android:layout_weight="1.2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@android:color/transparent"
+                android:layout_marginStart="8dp"
                 android:backgroundTint="#DCDCDC"
-                android:text="Add"
+                android:layout_below="@+id/tvEventLocation"
+                android:gravity="center"
+                android:text="Add to calender"
+                android:layout_marginTop="8dp"
+                android:drawablePadding="4dp"
                 android:textColor="@color/black"
                 android:textSize="12sp"
-                app:drawableLeftCompat="@drawable/baseline_calendar_month_24"
+                app:drawableLeftCompat="@drawable/baseline_calendar_month_48"
                 tools:ignore="TouchTargetSizeCheck" />
 
-            <Button
-                android:id="@+id/btnViewEventDetails"
-                android:layout_width="match_parent"
-                android:layout_height="fill_parent"
-                android:layout_weight="1"
-                android:backgroundTint="#DCDCDC"
-                android:text="View Event"
-                android:textColor="@color/black"
-                android:textSize="12sp"
-                app:drawableLeftCompat="@drawable/baseline_search_24"
-                tools:ignore="TouchTargetSizeCheck" />
-        </LinearLayout>
+        </RelativeLayout>
+
+
+
+
 
     </RelativeLayout>
 
