--- a/app/src/main/res/layout/event_detail.xml
+++ b/app/src/main/res/layout/event_detail.xml
@@ -89,6 +89,7 @@
             android:text="Event Date"
             android:textSize="16sp"
             android:visibility="gone"
+            android:textColor="@color/black"
             app:drawableStartCompat="@drawable/baseline_calendar_month_24" />
     </LinearLayout>
 
@@ -124,6 +125,7 @@
             android:layout_weight="1"
             android:drawablePadding="8dp"
             android:gravity="start"
+            android:textColor="@color/black"
             android:text="Title"
             android:textSize="16sp"
             android:visibility="gone"
@@ -144,6 +146,7 @@
         android:text="Title"
         android:textSize="16sp"
         android:visibility="gone"
+        android:textColor="@color/black"
         app:drawableTint="@color/black"
         app:drawableStartCompat="@drawable/baseline_location_on_24" />
 
