--- a/app/src/main/res/layout/contact_layout.xml
+++ b/app/src/main/res/layout/contact_layout.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_marginStart="16dp"
     android:layout_height="match_parent">
@@ -23,9 +24,12 @@
         android:layout_marginTop="16dp"
         android:text="wefwefefw"
         android:autoLink="map"
-        android:padding="8dp"
+        android:drawablePadding="8dp"
         android:textSize="16sp"
-        android:drawableStart="@drawable/baseline_location_on_24"/>
+        android:padding="8dp"
+        android:textColor="@color/black"
+        app:drawableStartCompat="@drawable/baseline_location_on_24"
+        app:drawableTint="@color/black" />
 
     <TextView
         android:id="@+id/tvEmail"
@@ -37,8 +41,10 @@
         android:padding="8dp"
         style="@style/TextViewLinkTheme"
         android:layout_marginTop="8dp"
+        android:drawablePadding="8dp"
         android:textSize="16sp"
-        android:drawableStart="@drawable/mail"/>
+        app:drawableStartCompat="@drawable/mail"
+        app:drawableTint="@color/black" />
 
     <TextView
         android:id="@+id/tvContact"
@@ -51,7 +57,9 @@
         style="@style/TextViewLinkTheme"
         android:layout_marginTop="8dp"
         android:textSize="16sp"
-        android:drawableStart="@drawable/call"/>
+        android:drawablePadding="8dp"
+        app:drawableStartCompat="@drawable/call"
+        app:drawableTint="@color/black" />
 
     <View
         android:id="@+id/endLine"
