--- a/app/src/main/res/layout/custom_adverts.xml
+++ b/app/src/main/res/layout/custom_adverts.xml
@@ -10,7 +10,6 @@
         android:layout_width="180dp"
         android:layout_height="130dp"
         app:cardCornerRadius="16dp"
-        app:cardElevation="10dp"
         android:layout_centerVertical="true"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
@@ -28,10 +27,11 @@
     <TextView
         android:id="@+id/tvAdvertTitle"
         android:layout_width="match_parent"
-        android:layout_height="70dp"
+        android:layout_height="50dp"
         android:text="Visit our local store!"
         android:gravity="center"
         android:layout_marginTop="8dp"
+        android:textColor="@color/black"
         android:textSize="16sp"
         android:layout_toEndOf="@+id/cardViewHome"
 
@@ -44,6 +44,7 @@
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
         android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         android:layout_toEndOf="@+id/cardViewHome"
         android:layout_below="@+id/tvAdvertTitle"
         android:backgroundTint="@android:color/transparent"
