--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -35,7 +35,7 @@
         <item
             android:id="@+id/nav_eelFeeding"
             android:title="@string/eelFeeding"
-            android:icon="@drawable/hiking" />
+            android:icon="@drawable/eel_icon" />
 
         <item
             android:id="@+id/nav_Contacts"
