--- a/app/src/main/res/layout/events_home.xml
+++ b/app/src/main/res/layout/events_home.xml
@@ -26,12 +26,14 @@
     <!-- Event name -->
     <TextView
         android:id="@+id/eventName"
-        android:layout_width="wrap_content"
+        android:layout_width="180dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="2dp"
         android:layout_toEndOf="@+id/cardViewHome"
         android:textSize="16sp"
+        android:maxLines="1"
+        android:ellipsize="end"
         android:textColor="@color/black"
         android:text="Eel Feeding" />
 
